# obc-firmware

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  pyproject.toml
.github/workflows/: gs_build.yml  hil_build.yml  obc_build.yml  obc_examples.yml  pre-commit.yml  pytest.yml  python_validation.yml  test.yml
cmake/: fetch_googletest.cmake  obc_build_options.cmake
hil/: hil_main.cpp
libs/: CMakeLists.txt
obc/: CMakeLists.txt
obc/app/: app_main.c
obc/app/drivers/: CMakeLists.txt
obc/app/modules/: CMakeLists.txt
obc/app/rtos/: gen_scheduler_config.py
obc/examples/dma_spi_demo/: main.c
obc/examples/test_app_adc/: main.c
obc/examples/test_app_arducam/: main.c
obc/examples/test_app_fram_persist/: main.c
obc/examples/test_app_fram_spi/: main.c
obc/examples/test_app_lm75bd/: main.c
obc/examples/test_app_metadata/: test_app_metadata.c
obc/examples/test_app_mpu6050/: main.c
obc/examples/test_app_reliance_edge_sd/: main.c
obc/examples/test_app_rtc/: main.c
obc/examples/test_ina230_driver/: main.c
obc/shared/logging/: CMakeLists.txt  log_file_ids.json  obc_log_file_ids.c  obc_log_file_ids.h  obc_logging.h  obc_logging_codec.c  obc_logging_codec.h
obc/shared/obc_errors/: obc_errors.h
obc/tools/app_update/: app_update.py  bin_formatter.py
obc/tools/cli/: cli.py  (+1 more)
python_test/: test_aro_requests_api.py
scripts/: example-build.sh  gen_log_file_ids.py  gs-build.sh  obc-build.sh  test.sh
test/: CMakeLists.txt
test/interfaces/: CMakeLists.txt  test_command_pack_unpack.cpp
test/unit/: CMakeLists.txt  test_log_codec.cpp
(+37 files in other folders)
