[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firmware"
version = "1.0.0"
description = "All python code used by UW Orbital's Firmware subteam"
requires-python = ">=3.12"

dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pyham-ax25>=1.0.3",
    "pyserial>=3.5",
    "pystuffing>=0.0.4",
    "textual>=8.2.6",
    "tinyaes>=1.1.2",
    "toml>=0.10.2",
]

[tool.setuptools]
packages = ["obc", "interfaces"]
